--- a/internal/pkg/generator/tmpl/tarantool/fixturestore.tmpl
+++ b/internal/pkg/generator/tmpl/tarantool/fixturestore.tmpl
@@ -71,7 +71,7 @@ func Get{{$PublicStructName}}By{{$fieldNamePK}}({{$fieldNamePK}} {{$typePK}}) *{
     return res
 }
 
-func {{$PublicStructName}}Iterator() func(it func(any) error) error {
+func {{$PublicStructName}}StoreIterator() func(it func(any) error) error {
     return func(it func(e any) error) error {
         init{{$PublicStructName}}()
 
