add secure connection

--- a/internal/pkg/generator/tmpl/tarantool/main.tmpl
+++ b/internal/pkg/generator/tmpl/tarantool/main.tmpl
@@ -64,15 +64,18 @@ const (
 var boxOption, _ = tarantool.NewOptions(
     "{{ .Server.Host }}:{{ .Server.Port }}",
     activerecord.ModeMaster,
-    tarantool.WithTimeout(time.Millisecond * {{ .Server.Timeout }}, time.Millisecond * {{ .Server.Timeout }}),
+    tarantool.WithTimeout(time.Millisecond * {{ .Server.Timeout }}),
 )
+
+var optionCreator = func(sic activerecord.ShardInstanceConfig) (activerecord.OptionInterface, error) {
+    return boxOption, nil
+}
 
 var clusterInfo = activerecord.NewClusterInfo(
     activerecord.WithShard([]activerecord.OptionInterface{boxOption}, []activerecord.OptionInterface{}),
 )
-{{ else}}
-var cfgName = "{{.Server.Conf }}"
 {{ end }}
+var cfgName = "{{.Server.Conf }}"
 
 func New(ctx context.Context) *{{ $PublicStructName }} {
     newObj := {{ $PublicStructName }}{}
@@ -579,7 +582,7 @@ func (obj *{{ $PublicStructName }}) Delete(ctx context.Context) error {
         return fmt.Errorf("can't delete not exists object")
     }
 
-    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, nil)
+    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, {{ if eq .Server.Conf "" -}}optionCreator{{ else }}nil{{ end -}})
     if err != nil {
         metricErrCnt.Inc(ctx, "delete_preparebox", 1)
         logger.Error(ctx, "PromoBunches", obj.PrimaryString(), fmt.Sprintf("Error get box '%s'", err))
@@ -627,7 +630,7 @@ func (obj *{{ $PublicStructName }}) Update(ctx context.Context) error {
     	return obj.Replace(ctx)
     }*/
 
-    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, nil)
+    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, {{ if eq .Server.Conf "" -}}optionCreator{{ else }}nil{{ end -}})
     if err != nil {
         metricErrCnt.Inc(ctx, "update_preparebox", 1)
         logger.Error(ctx, "{{ $PublicStructName }}", obj.PrimaryString(), fmt.Sprintf("Error get box '%s'", err))
@@ -672,7 +675,7 @@ func (obj *{{ $PublicStructName }}) Insert(ctx context.Context) error {
         return fmt.Errorf("can't insert already exists object")
     }
 
-    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, nil)
+    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, {{ if eq .Server.Conf "" -}}optionCreator{{ else }}nil{{ end -}})
     if err != nil {
         metricErrCnt.Inc(ctx, "insertreplace_preparebox", 1)
         logger.Error(ctx, "{{ $PublicStructName }}", obj.PrimaryString(), fmt.Sprintf("Error get box '%s'", err))
@@ -716,7 +719,7 @@ func (obj *{{ $PublicStructName }}) Replace(ctx context.Context) error {
         return fmt.Errorf("can't replace not exists object")
     }
 
-    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, nil)
+    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, {{ if eq .Server.Conf "" -}}optionCreator{{ else }}nil{{ end -}})
     if err != nil {
         metricErrCnt.Inc(ctx, "insertreplace_preparebox", 1)
         logger.Error(ctx, "{{ $PublicStructName }}", obj.PrimaryString(), fmt.Sprintf("Error get box '%s'", err))
@@ -756,7 +759,7 @@ func (obj *{{ $PublicStructName }}) InsertOrReplace(ctx context.Context) error {
 
     metricStatCnt.Inc(ctx, "insertorreplace_request", 1)
 
-    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, nil)
+    connection, err := tarantool.Box(ctx, 0, activerecord.MasterInstanceType, cfgName, {{ if eq .Server.Conf "" -}}optionCreator{{ else }}nil{{ end -}})
     if err != nil {
         metricErrCnt.Inc(ctx, "insertreplace_preparebox", 1)
         logger.Error(ctx, "{{ $PublicStructName }}", obj.PrimaryString(), fmt.Sprintf("Error get box '%s'", err))
@@ -795,7 +798,7 @@ func selectBox(ctx context.Context, indexnum uint32, keys []interface{}, iterTyp
     metricStatCnt := activerecord.Metric().StatCount("tarantool", "{{ $PublicStructName }}")
     metricErrCnt := activerecord.Metric().ErrorCount("tarantool", "{{ $PublicStructName }}")
 
-    connection, err := tarantool.Box(ctx, 0, activerecord.ReplicaOrMasterInstanceType, cfgName, nil)
+    connection, err := tarantool.Box(ctx, 0, activerecord.ReplicaOrMasterInstanceType, cfgName, {{ if eq .Server.Conf "" -}}optionCreator{{ else }}nil{{ end -}})
     if err != nil {
         metricErrCnt.Inc(ctx, "select_preparebox", 1)
         logger.Error(ctx, fmt.Sprintf("Error get box '%s'", err))
@@ -854,7 +857,7 @@ func executeSQL(ctx context.Context, sqlText string, args []any) ([]*{{ $PublicS
     metricStatCnt := activerecord.Metric().StatCount("tarantool", "{{ $PublicStructName }}")
     metricErrCnt := activerecord.Metric().ErrorCount("tarantool", "{{ $PublicStructName }}")
 
-    connection, err := tarantool.Box(ctx, 0, activerecord.ReplicaOrMasterInstanceType, cfgName, nil)
+    connection, err := tarantool.Box(ctx, 0, activerecord.ReplicaOrMasterInstanceType, cfgName, {{ if eq .Server.Conf "" -}}optionCreator{{ else }}nil{{ end -}})
     if err != nil {
         metricErrCnt.Inc(ctx, "execute_preparebox", 1)
         logger.Error(ctx, fmt.Sprintf("Error get box '%s'", err))
